# yolo_train_starter

./: README.md  Run_GUI.bat  Run_train.bat  Run_yolo_class_tools.bat  Setup_uv_venv.bat  Start_uv.bat  data.yaml  pyproject.toml  requirements.txt  yolo_class_tools.py  yolo_train_gui.py  yolo_train_starter.py
images/val/: .del_it
models/: yolo26.yaml  yolo26n.yaml  yolo26s.yaml
